--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,59 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+body,
+html {
+    height: 100%;
+}
+
+html {
+    background-color: black;
+}
+
+h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 250%;
+    text-align: center;
+    color: white;
+    background-color: black;
+    margin: 1%;
+}
+
+p {
+    color: white;
+    background-color: black;
+    padding: 5% 10% 5% 10%;
+}
+
+header nav {
+    display: table;
+    width: 98%;
+    border: 6px solid white;
+    padding: 10px;
+}
+
+header nav ul {
+    display: table-row;
+    list-style-type: none;
+
+}
+
+header nav ul li {
+    display: table-cell;
+    text-align: center;
+    /* border: 2px solid white; */
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    color: cyan;
+}
 
 
 
