--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ h3#schoolHeading {
 
 h3#jobHeading {
     padding-top: 3%;
-    margin: 3% 0% 0% 19%;
+    margin: 3% 0% 0% 13%;
     display: inline-block;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -98,6 +98,13 @@ h4 {
     padding-left: 20.5%;
 }
 
+h3#volunteerHeading {
+    margin: 5% 0% 0% 13%;
+    text-align: center;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 /* Image Styles */
 img.program {
     display: inline-block;
@@ -120,9 +127,18 @@ img#schoolLogo {
 
 img#jobLogo {
     display: inline-block;
-    margin: 3% 0% 0% 18%;
+    margin: 6% 0% 0% 16%;
     border: 1px solid white;
     float: left;
+    width: 20%;
+}
+
+img#volunteerLogo {
+    display: inline-block;
+    margin: 6% 0% 0% 16%;
+    border: 1px solid white;
+    float: left;
+    width: 20%;
 }
 
 /* Paragraph Styles */
@@ -132,6 +148,11 @@ p#schoolCaption {
 }
 
 p#jobCaption {
+    margin: 3% 10% 0% 30%;
+    text-indent: 3%;
+}
+
+p#volunteerSummary {
     margin: 3% 10% 0% 30%;
     text-indent: 3%;
 }
@@ -147,14 +168,14 @@ p {
 }
 
 /* List Styles */
-ul {
+ul.xp {
     list-style-type: none;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
 }
 
-li {
+li.xp {
     margin-right: 3%;
     padding-top: 1%;
 }
