--- a/css/styles.css
+++ b/css/styles.css
@@ -49,40 +49,27 @@ h3#schoolHeading {
     padding-top: 3%;
     margin: 3% 0% 0% 12%;
     display: inline-block;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 h3#jobHeading {
     padding-top: 3%;
     margin: 3% 0% 0% 13%;
     display: inline-block;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 h3#codingXp {
-    text-align: center;
     text-decoration: underline;
     padding-top: 3%;
     display: block;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 h3#programs {
-    text-align: center;
     text-decoration: underline;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-bottom: 5%;
 }
 
 h3.xp {
-    text-align: center;
     text-decoration: underline;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 h2#employment {
@@ -94,6 +81,10 @@ h2#volunteer {
 }
 
 h2.xp {
+    margin-top: 5%;
+}
+
+h2#skills {
     margin-top: 5%;
 }
 
@@ -116,9 +107,10 @@ h4 {
 
 h3#volunteerHeading {
     margin: 5% 15% 0% 0%;
-    text-align: center;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h3#dylanHeading {
+    margin: 3% 15% 0% 0%;
 }
 
 h3 {
@@ -175,6 +167,14 @@ img#volunteerLogo:hover {
     border-color: cyan;
 }
 
+img#dylan {
+    border: 1px solid white;
+    display: inline-block;
+    float: left;
+    width: 10%;
+    margin: 5% 0% 3% 18%;
+}
+
 /* Paragraph Styles */
 p#schoolCaption {
     margin: 3% 10% 0% 30%;
@@ -188,6 +188,11 @@ p#jobCaption {
 
 p#volunteerSummary {
     margin: 3% 10% 0% 30%;
+    text-indent: 3%;
+}
+
+p#dylanCaption {
+    margin: 3% 10% 0% 25%;
     text-indent: 3%;
 }
 
@@ -214,6 +219,23 @@ li.xp {
     padding-top: 1%;
 }
 
+dl {
+    text-align: center;
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+dt {
+    margin: 0% 40% 1% 0%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+
+}
+
+dd {
+    margin: 0% 20% 2% 30%;
+}
+
 /* Header and Navigation Styles */
 header {
     background-color: rgba(0, 0, 0, 0.8)
@@ -226,7 +248,8 @@ nav {
 
 header nav {
     display: table;
-    width: 98.7%;
+    width: 98.6%;
+    /* width: 98.7%; */
     padding: 10px;
     border-bottom: 1px solid white;
 }
@@ -234,7 +257,7 @@ header nav {
 header nav ul {
     display: table-row;
     list-style-type: none;
-
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header nav ul li {
