--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,10 @@ h2#skills {
     margin-top: 5%;
 }
 
+h2#contact {
+    margin-top: 8%;
+}
+
 h2 {
     background-color: rgba(0, 0, 0, 0);
     color: white;
@@ -498,3 +502,60 @@ a.slideshowCaption:hover {
         opacity: 1
     }
 } */
+
+/* =================== */
+/* Contact Form Styles */
+/* =================== */
+
+label {
+    color: white;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text],
+select,
+textarea {
+    width: 100%;
+    /* Full width */
+    padding: 12px;
+    /* Some padding */
+    border: 1px solid black;
+    /* Black border */
+    border-radius: 10px;
+    /* Rounded borders */
+    box-sizing: border-box;
+    /* Make sure that padding and width stays in place */
+    margin-top: 6px;
+    /* Add a top margin */
+    margin-bottom: 16px;
+    /* Bottom margin */
+    resize: vertical;
+    /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+    background-color: transparent;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    margin-bottom: 3%;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+    background-color: white;
+    color: black;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+    border-radius: 5px;
+    background-color: transparent;
+    padding: 20px;
+    margin: 0% 25% 0% 25%;
+}
